Fix gap on Safari

--- a/public/css/film.css
+++ b/public/css/film.css
@@ -3,6 +3,7 @@ ul.film-list {
   padding: 0;
 
   & li {
+    display: flex;
     margin: 0;
     padding: 2px 0;
   }
